<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_imc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_title"
        android:elegantTextHeight="true"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_massa"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:autoText="false"
        android:contentDescription="@string/app_subtitle"
        android:text="@string/app_subtitle"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_imc"
        tools:ignore="Deprecated,TextSizeCheck,TextViewEdits" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_nome"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_massa">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hint_nome"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapCharacters"
            android:textColorHint="@color/colorHint"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_altura"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_peso">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hint_altura"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_altura"
            android:inputType="number|numberDecimal"
            android:textColorHint="@color/colorHint"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_peso"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hint_peso"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_peso"
            android:inputType="number|numberDecimal"
            android:textColorHint="@color/colorHint"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculo_btn"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:contentDescription="@string/calculo_btn"
        android:text="@string/calculo_btn"
        android:textColor="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_altura" />

    <ImageView
        android:layout_width="57dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imc_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculo_btn"
        app:srcCompat="@drawable/imc" />

</androidx.constraintlayout.widget.ConstraintLayout>